--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 FRONTEND_URL = http://localhost:3000
-MONGODB_URI = mongodb+srv://joser1jidl:SB9lraX1fvLpLW0h@cluster0.gcphuwr.mongodb.net//chat-app
+MONGODB_URI = mongodb+srv://joser1jidl:SB9lraX1fvLpLW0h@cluster0.gcphuwr.mongodb.net/chat-app
+JWT_SECRET_KEY = 'ASKDGJSLDJGSLA;KDJIUOEWUTPIOUASKLDGJ;SLDKAJG'
