--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,27 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "./app.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "./frontend/dist/index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "./frontend/dist/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/.*",
+      "src": "/api/(.*)",
       "dest": "app.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/dist/$1"
     }
   ]
 }
