--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,11 @@
       "use": "@vercel/node"
     },
     {
-      "src": "./frontend/dist/index.html",
+      "src": "./frontend/build/index.html",
       "use": "@vercel/static"
     },
     {
-      "src": "./frontend/dist/**/*",
+      "src": "./frontend/build/**/*",
       "use": "@vercel/static"
     }
   ],
@@ -21,7 +21,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "frontend/build/$1"
     }
   ]
 }
