--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL = http://localhost:3000
+FRONTEND_URL = https://chat-cool.vercel.app/
 MONGODB_URI = mongodb+srv://joser1jidl:xBgNbAltq8S0@cluster0.gcphuwr.mongodb.net/chat-app
 JWT_SECRET_KEY = 'ASKDGJSLDJGSLA;KDJIUOEWUTPIOUASKLDGJ;SLDKAJG'
